--- a/map/templates/home.html
+++ b/map/templates/home.html
@@ -1,25 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style type="text/css">
-      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
-    </style>
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdBGirrj9hw_otpuv9lih8bMHufgaovqc">
-    </script>
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: { lat: 24.397, lng: 120.644},
-          zoom: 8
-        };
-        var map = new google.maps.Map(document.getElementById('map-canvas'),
-            mapOptions);
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-  </head>
-  <body>
-<div id="map-canvas"></div>
-  </body>
+	<head>
+		<style type="text/css">
+			html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+		</style>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdBGirrj9hw_otpuv9lih8bMHufgaovqc">
+		</script>
+		<script type="text/javascript">
+			function initialize() {
+				// Create an array of styles.
+				var styles = [{
+					stylers: [
+						{ hue: "#ffa600" },
+						{ saturation: -20 }
+					]
+				},{
+					featureType: "road",
+					elementType: "geometry",
+					stylers: [
+						{ lightness: 100 },
+						{ visibility: "simplified" },
+						{ color: '#fea600' }
+					]
+				},{
+					featureType: "road",
+					elementType: "labels",
+					stylers: [
+						{ visibility: "off" }
+					]
+				}];
+		
+				// Create a new StyledMapType object, passing it the array of styles,
+				// as well as the name to be displayed on the map type control.
+				var styledMap = new google.maps.StyledMapType(styles, {name: "Styled Map"});
+		
+				// Create a map object, and include the MapTypeId to add
+				// to the map type control.
+				var mapOptions = {
+					zoom: 8,
+					center: { lat: 24.397, lng: 120.644},
+					// center: new google.maps.LatLng(55.6468, 37.581),
+					mapTypeControlOptions: {
+						mapTypeIds: [google.maps.MapTypeId.ROADMAP, 'map_style']
+					}
+				};
+				var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+		
+				//Associate the styled map with the MapTypeId and set it to display.
+				map.mapTypes.set('map_style', styledMap);
+				map.setMapTypeId('map_style');
+			}
+			google.maps.event.addDomListener(window, 'load', initialize);
+		</script>
+	</head>
+	<body>
+		<div id="map-canvas"></div>
+	</body>
 </html>
