--- a/map/templates/home.html
+++ b/map/templates/home.html
@@ -18,15 +18,58 @@
 					featureType: "road",
 					elementType: "geometry",
 					stylers: [
-						{ lightness: 100 },
+						{ lightness: 50 },
 						{ visibility: "simplified" },
-						{ color: '#fea600' }
+						{ color: '#ffffff' }
 					]
 				},{
 					featureType: "road",
 					elementType: "labels",
 					stylers: [
 						{ visibility: "off" }
+					]
+				},{
+					featureType: "landscape.natural",
+					stylers: [
+						{ "visibility": "off" }
+					]
+				},{
+					featureType: "poi.park",
+					stylers: [
+						{ "visibility": "off" }
+					]
+				},{
+					featureType: "road",
+					elementType: "geometry.fill",
+					stylers: [
+						{ "visibility": "simplified" }
+					]
+				},{
+					featureType: "landscape",
+					stylers: [
+						{ visibility: "off" }
+					]
+				},{
+					featureType: "poi.park",
+					stylers: [
+						{ visibility: "off" }
+					]
+				},{
+					featureType: "road",
+					elementType: "geometry",
+					stylers: [
+						{ "visibility": "off" }
+					]
+				},{
+					featureType: "landscape.natural.terrain",
+					stylers: [
+						{ gamma: 9.99 }
+					]
+				},{
+					featureType: "road",
+					elementType: "labels",
+					stylers: [
+						{ "visibility": "off" }
 					]
 				}];
 		
@@ -37,8 +80,8 @@
 				// Create a map object, and include the MapTypeId to add
 				// to the map type control.
 				var mapOptions = {
-					zoom: 8,
-					center: { lat: 24.397, lng: 120.644},
+					// zoom: 8,
+					// center: { lat: 24.397, lng: 120.644},
 					// center: new google.maps.LatLng(55.6468, 37.581),
 					mapTypeControlOptions: {
 						mapTypeIds: [google.maps.MapTypeId.ROADMAP, 'map_style']
@@ -49,6 +92,37 @@
 				//Associate the styled map with the MapTypeId and set it to display.
 				map.mapTypes.set('map_style', styledMap);
 				map.setMapTypeId('map_style');
+
+				layer = new google.maps.FusionTablesLayer({
+					query: {
+						select: 'geometry',
+						from: '1ertEwm-1bMBhpEwHhtNYT47HQ9k2ki_6sRa-UQ'
+					},
+					styles: [{
+						polygonOptions: {
+						fillColor: '#00FF00',
+						fillOpacity: 0.3
+						}
+					},{
+						where: 'birds > 300',
+						polygonOptions: {
+							fillColor: '#0000FF'
+						}
+					},{
+						where: 'population > 5',
+						polygonOptions: {
+							fillOpacity: 1.0
+						}
+					}]
+				});
+				layer.setMap(map);
+				var bound1 = new google.maps.LatLng(26.515947, 123.213976);
+
+				var bound2 = new google.maps.LatLng(21.784257, 118.276845);
+				var bounds = new google.maps.LatLngBounds();
+				bounds.extend(bound1);
+				bounds.extend(bound2);
+				map.fitBounds(bounds);
 			}
 			google.maps.event.addDomListener(window, 'load', initialize);
 		</script>
