--- a/map/static/css/main.css
+++ b/map/static/css/main.css
@@ -1479,7 +1479,7 @@
 	h1, h2, h3, h4, h5, h6 {
 		color: #fff;
 		font-weight: 800;
-		letter-spacing: 0.225em;
+		letter-spacing: 0em;
 		line-height: 1em;
 		margin: 0 0 1em 0;
 		text-transform: uppercase;
@@ -1529,7 +1529,7 @@
 	}
 
 	h6 {
-		font-size: 0.7em;
+		font-size: 0.6em;
 		line-height: 1.5em;
 	}
 
@@ -1774,7 +1774,7 @@
 			text-decoration: none;
 			color: #fff;
 			cursor: pointer;
-			display: inline-block;
+			display: initial;
 			font-size: 1em;
 			font-weight: 400;
 			padding-left: 2.4em;
@@ -1798,20 +1798,22 @@
 				border-radius: 3px;
 				content: '';
 				display: inline-block;
-				height: 1.65em;
 				left: 0;
 				line-height: 1.58125em;
 				position: absolute;
 				text-align: center;
 				top: 0;
-				width: 1.65em;
+				width: 20px;
+				height: 20px;
 			}
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
 			background: #2e3842;
+			background-size: 20px 20px;
 			color: #fff;
 			content: '\f00c';
+			margin-bottom: 5px;			
 		}
 
 		input[type="checkbox"]:focus + label:before,
@@ -2240,8 +2242,8 @@
 		background-color: transparent;
 		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #fff;
-		color: #fff;
+		box-shadow: inset 0 0 0 2px #FFD633;
+		color: #FFD633;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2263,7 +2265,7 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(144, 144, 144, 0.25);
+			background-color: rgba(255,255,204,0.5);
 		}
 
 		input[type="submit"]:active,
@@ -3197,6 +3199,11 @@
 					margin-top: 0 !important;
 					padding-top: 0 !important;
 				}
+				#menu ul > li:last-child  {
+					color: #331A00 !important;
+					font-size: 15pt !important;
+					margin-top: 0.3em;
+				}
 
 				#menu ul > li > a {
 					border: 0;
@@ -3218,6 +3225,11 @@
 							line-height: 3em;
 						}
 
+					}
+					#menu ul > li > div > select:hover,
+					#menu ul > li > div > label {
+						color: #331A00;
+						font-size: 13pt !important
 					}
 
 		@media screen and (max-width: 736px) {
@@ -3336,6 +3348,7 @@
 							outline: 0;
 							position: relative;
 							margin-left: 10px;
+							margin-top: 10px;
 						}
 
 							#header nav > ul > li > button.menuToggle:after {
