--- a/map/templates/index.html
+++ b/map/templates/index.html
@@ -16,6 +16,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="/static/css/ie9.css" /><![endif]-->
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdBGirrj9hw_otpuv9lih8bMHufgaovqc">
 		</script>
+		<script type="text/javascript" src="http://d3js.org/topojson.v1.min.js"></script>
 		<script type="text/javascript" src="/static/js/map.js"></script>
 	</head>
 	<body class="landing is-menu-visible">
@@ -73,9 +74,10 @@
 				</nav>
 			</header>
 		<!-- Page Wrapper -->
-			<div id="map-canvas">
-
-			</div>
+			<div id="map-canvas-1"></div>
+			<div id="map-canvas-2"></div>
+			<div id="map-canvas-3"></div>
+			<div id="blocker"></div>
 		<!-- Scripts -->
 			<script src="/static/js/jquery.min.js"></script>
 			<script src="/static/js/jquery.scrollex.min.js"></script>
@@ -83,6 +85,6 @@
 			<script src="/static/js/skel.min.js"></script>
 			<script src="/static/js/util.js"></script>
 			<!--[if lte IE 8]><script src="/static/js/ie/respond.min.js"></script><![endif]-->
-			<script src="/static/js/main.js"></script>
+			<script src="/static/js/main.js"></script>			
 	</body>
 </html>
