--- a/map/static/css/main.css
+++ b/map/static/css/main.css
@@ -9,6 +9,9 @@
 
 /* Reset */
 
+	svg {
+		position: absolute;
+	}
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -48,10 +51,47 @@
 		-webkit-text-size-adjust: none;
 	}
 
-	html, body, #map-canvas {
+	html, body, #map-canvas-1{
 		height: 100%;
 		margin: 0;
 		padding: 0;
+	}
+
+	#map-canvas-2 {
+		width: 400px;
+		height: 300px;
+		position: absolute;
+		top: 50px;
+    	left: 450px;
+		margin: 0;
+		padding: 0;
+		border: 1px solid #000;
+		z-index: 1;
+	}
+
+	#map-canvas-3 {
+		width: 400px;
+		height: 300px;
+		position: absolute;
+		top: 310px;
+    	left: 450px;
+		margin: 0;
+		padding: 0;
+		border: 1px solid #000;
+		z-index: 2;
+	}
+
+	#blocker {
+		width: 400px;
+		height: 100px;
+		position: absolute;
+    	top: 580px;
+    	background-color: white;
+       	left: 450px;
+		margin: 0;
+		padding: 0;
+		border-top: 1px solid #000;
+		z-index: 3;
 	}
 /* Box Model */
 
