Another Money on map

--- a/map/templates/index.html
+++ b/map/templates/index.html
@@ -19,6 +19,8 @@
         <script type="text/javascript" src="http://d3js.org/topojson.v1.min.js"></script>
         <script type="text/javascript">
             var fund_103 = {{ fund_list_103|safe }};
+            var fund_102 = {{ fund_list_102|safe }};
+            var surp_103 = {{ surp_list_103|safe }}
             var county = {{location_list|safe}};
         </script>
         <script type="text/javascript" src="/static/js/map.js"></script>
