--- a/map/static/css/main.css
+++ b/map/static/css/main.css
@@ -56,13 +56,19 @@
 		margin: 0;
 		padding: 0;
 	}
+	option{
+		background-color: rgba(21, 140, 40, 0.25);
+	}
+
+	#outer_islands{
+		position: absolute;
+		top: 350px;
+		left: 450px;
+	}
 
 	#map-canvas-2 {
-		width: 400px;
-		height: 300px;
-		position: absolute;
-		top: 50px;
-    	left: 450px;
+		width: 300px;
+		height: 200px;
 		margin: 0;
 		padding: 0;
 		z-index: 1;
@@ -71,9 +77,8 @@
 	#map-canvas-3 {
 		width: 400px;
 		height: 300px;
-		position: absolute;
-		top: 310px;
-    	left: 450px;
+		top: -35px;
+    	left: -50px;
 		margin: 0;
 		padding: 0;
 		z-index: 2;
@@ -81,11 +86,11 @@
 
 	#blocker {
 		width: 400px;
-		height: 100px;
-		position: absolute;
-    	top: 575px;
+		height: 60px;
     	background-color: #ffe24d;
-       	left: 450px;
+	    position: relative;
+    	left: -50px;
+    	top: -70px;
 		margin: 0;
 		padding: 0;
 		z-index: 3;
@@ -95,7 +100,7 @@
 		line-height:97px;
 		width:100px;
 		height:97px;
-		background-color: green;
+		background-color: #158c28;
 		border: 1px none #000;
 		border-radius: 50%;
 		display: none;
@@ -105,6 +110,7 @@
     	left: 450px;
     	cursor: pointer;
     	text-align: center;
+    	color: #ffe24d;
     	font-size: 13px;
 	}
 
@@ -112,35 +118,38 @@
 		display: none;
 		position: relative;
     	font-size: 13px;
-    	color: #000;
-    	background-color: white;
+    	color: #ffe24d;
+    	background-color: #158c28;
     	padding: 10px;
     	margin-bottom: 10px;
+    	width: 100%;
 	}
 
 	#store_detail {
 		display: none;
 		position: relative;
     	font-size: 13px;
-    	color: #000;
-    	background-color: white;
+    	color: #ffe24d;
+    	background-color: #158c28;
     	padding: 10px;
     	margin-bottom: 10px;
+    	width: 100%;
 	}
 
 	#org_detail {
 		display: none;
 		position: relative;
     	font-size: 13px;
-    	color: #000;
-    	background-color: white;
+    	color: #ffe24d;
+    	background-color: #158c28;
     	padding: 10px;
-    	width: 400px;
+    	width: 100%;
     	margin-bottom: 10px;
 	}
 
 	#detail{
 		position: absolute;
+    	width: 400px;
     	top: 17px;
     	right: 50px;
     	z-index: 4;
@@ -1493,7 +1502,7 @@
 	}
 
 	body {
-		background: #2e3842;
+		background: #ffe24d;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -1508,7 +1517,7 @@
 		}
 
 	body, input, select, textarea {
-		color: #fff;
+		color: #ffe24d;
 		font-family: "Open Sans", Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 400;
@@ -1773,10 +1782,9 @@
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: rgba(144, 144, 144, 0.25);
+		background: rgba(21, 140, 40, 0.25);
 		border-radius: 3px;
 		border: none;
-		color: inherit;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
