--- a/map/templates/index.html
+++ b/map/templates/index.html
@@ -37,11 +37,10 @@
     <body class="landing is-menu-visible">
         <!-- Header -->
             <header id="header" class="alt">
-                <h1><a href="{% url 'map.views.index' %}">Spectral</a></h1>
+                <h1><a href="{% url 'map.views.index' %}"></a></h1>
                 <nav id="nav">
                     <ul>
                         <li class="special">
-                            <!--<a href="#menu" class="menuToggle"><span>Menu</span></a> -->
                             <button class="menuToggle button small">Menu</button>
                             <div id="menu">
                                 <ul>
