--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">豬肉俠公益地圖</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Pork Man Welfare Map</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#services">服務</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">地圖</a>
+                        <a class="page-scroll" href="/">地圖</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">聯絡我們</a>
@@ -72,9 +72,9 @@
         <div class="header-content">
             <div class="header-img"><img src="/static/pages/img/pigman.png" id="porkimg"></div>
             <div class="header-content-inner">
-                <h1>歡迎來豬肉俠公益地圖</h1>
+                <h1>豬肉俠公益地圖</h1>
                 <hr>
-                <h3 class="eng-name">Pork Guy Welfare Map</h3>
+                <h3>"人人都有肉吃，就是我的俠義之道"</h3>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">瞭解更多</a>
             </div>
         </div>
@@ -84,9 +84,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">伊甸募款音樂會</h2>
+                    <h2 class="section-heading">豬肉俠公益地圖</h2>
                     <hr class="light">
-                    <p class="text-faded">豬肉俠</p>
+                    <p class="explain-text">一個結合了臺灣公益彩券行資料與臺灣各社福與慈善基構資料的臺灣專屬公益地圖</p>
+                    <p class="explain-text">"OO彩券下期頭獎累積金額上看10億!..."，每當彩券頭獎金額新聞一出，便可看到彩券行前排滿長長的人龍。豬肉俠每次看到此景便會陷入沉思 : 難道大家都忘了台灣彩券發行是為公益而存?是為了幫助弱勢嗎?</p>
+                    <p class="explain-text"></p>
+
                     <a href="#portfolio" class="btn btn-default btn-xl">開始使用</a>
                 </div>
             </div>
