--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -21,7 +21,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/static/pages/css/common.css" type="text/css">
-    <link rel="stylesheet" href="/static/pages/css/index.css" type="text/css">
+    <link rel="stylesheet" href="/static/pages/css/home.css" type="text/css">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -74,7 +74,7 @@
             <div class="header-content-inner">
                 <h1>豬肉俠公益地圖</h1>
                 <hr>
-                <h3>"人人都有肉吃，就是我的俠義之道"</h3>
+                <h3>"人人有肉吃，就是我的俠義之道"</h3>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">瞭解更多</a>
             </div>
         </div>
@@ -84,13 +84,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">豬肉俠公益地圖</h2>
+                    <h2 class="section-heading">一個結合了臺灣公益彩券行資料與臺灣各社福與慈善基構資料的臺灣專屬公益地圖</h2>
                     <hr class="light">
-                    <p class="explain-text">一個結合了臺灣公益彩券行資料與臺灣各社福與慈善基構資料的臺灣專屬公益地圖</p>
-                    <p class="explain-text">"OO彩券下期頭獎累積金額上看10億!..."，每當彩券頭獎金額新聞一出，便可看到彩券行前排滿長長的人龍。豬肉俠每次看到此景便會陷入沉思 : 難道大家都忘了台灣彩券發行是為公益而存?是為了幫助弱勢嗎?</p>
-                    <p class="explain-text"></p>
-
-                    <a href="#portfolio" class="btn btn-default btn-xl">開始使用</a>
+                    <h5 class="porkguy-desc">豬肉俠平常樂善好施，關心社會議題，對於幫助弱勢總是當仁不讓</h5>
+                    <h5 class="porkguy-desc">堪稱21世紀廖添丁，心中最大的心願就是台灣人人有肉吃</h5>                    
+                    <p class="explain-text">"OO彩券下期頭獎累積金額上看10億!..."，每當彩券頭獎金額新聞一出，便可看到各家彩券行前充滿著人潮，各個表情如此($~$)。豬肉俠每次看到此景便會陷入沉思 :</p>
+                    <p class="explain-text-highlight">"難道大家都忘了台灣彩券的發行是為公益而存嗎?"</p>
+                    <p class="explain-text-highlight">"是為了幫助弱勢嗎?"</p>
+                    <p class="explain-text">為了提醒社會大眾公益彩券的成立初衷，熱情滿滿的豬肉俠就馬上著手計畫 ......</p>
+                    <a href="#services" class="btn btn-default btn-xl page-scroll">服務介紹</a>
                 </div>
             </div>
         </div>
@@ -103,74 +105,61 @@
                     <h2 class="section-heading">我們的服務</h2>
                     <hr class="primary">
                 </div>
+                <div class="col-lg-12 text-center">
+                    <p></p>
+                </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-music wow bounceIn text-primary"></i>
-                        <h3>很久沒聽音樂會了嗎</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>充滿希望</h3>
-                        <p class="text-muted"></p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-calendar wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>最新音樂會資訊</h3>
-                        <p class="text-muted"></p>
+                        <i class="fa fa-4x fa-usd wow bounceIn text-primary"></i>
+                        <h3>公益彩券行</h3>
+                        <p class="text-muted">標記所有彩券行位置，同時顯示該行累計頭獎次數</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>立即線上捐款</h3>
-                        <p class="text-muted"></p>
+                        <h3>社服慈善機構</h3>
+                        <p class="text-muted">地圖上標記全台灣社福慈善機構地點，依年度為索引，顯示其申請到的回饋金補助金額</p>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-fire wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>資料圖象化</h3>
+                        <p class="text-muted">公益地圖各縣市會以顏色深淺來表示所得補助金額量多或少，讓您一目了然，了解各縣市社福資源不均的問題</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-thumbs-up wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>資訊透明化</h3>
+                        <p class="text-muted">公布各個回饋金計畫審核內容，與得到補助後實行成果</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <a href="/" class="btn btn-primary btn-xl wow tada" style="margin-top: 20px;">開始使用地圖</a>
+                </div>
+            </div>
+                        
+        </div>
+        
     </section>
 
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-            <?php
-            for($i = 0; $i < 3; $i++)
-            {
-                $row_event = mysqli_fetch_array($Event); ?>
-                <div class="col-lg-4 col-sm-6"> 
-                    <a href="eventdetail.php?concertid=<?php echo $row_event[2]; ?>" class="portfolio-box">
-                        <img src="img/portfolio/<?php echo ($i+1);?>.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    <?php echo $row_event[1]; ?>
-                                </div>
-                                <div class="project-name">
-                                    <?php echo $row_event[0]; ?>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-      <?php }?>          
-            </div>
-        </div>
-    </section>
 
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>想要參加更多不同的活動嗎？</h2>
-                <a href="events.php" class="btn btn-default btn-xl wow tada">瀏覽所有活動</a>
+                <a class="btn btn-default btn-xl wow tada">瀏覽所有活動</a>
             </div>
         </div>
     </aside>
@@ -179,17 +168,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">聯絡我們</h2>
+                    <h2 class="section-heading">聯絡豬肉俠</h2>
                     <hr class="primary">
-                    <p>不只是客戶服務，更是您的最佳良伴！</p>
+                    <p>歡迎社福慈善機構來電，豬肉俠會立即出動，予以協助!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>(02)2230-7715</p>
+                    <i class="fa fa-phone fa-3x wow bounceIn" style="color: #37b34a;"></i>
+                    <p style="color: #37b34a;">(02)2230-7715</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@eden.org.tw</a></p>
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s" style="color: #37b34a;"></i>
+                    <p><a href="mailto:your-email@your-domain.com" style="color: #37b34a;">feedback@gliacloud.com</a></p>
                 </div>
             </div>
         </div>
