--- a/map/static/css/main.css
+++ b/map/static/css/main.css
@@ -328,7 +328,8 @@
 	.\36 u, .\36 u\24 {
 		width: 50%;
 		clear: none;
-		margin-left: 0;
+		margin-left: 0px;
+		margin-bottom: 10px
 	}
 
 	.\35 u, .\35 u\24 {
@@ -1812,6 +1813,8 @@
 		text-decoration: none;
 		display: block;
 		position: relative;
+		width: 200px;
+		margin-left: 40px
 	}
 
 		.select-wrapper:before {
@@ -1894,7 +1897,7 @@
 
 			input[type="checkbox"] + label:before,
 			input[type="radio"] + label:before {
-				background: rgba(144, 144, 144, 0.25);
+				background: rgba(21, 140, 40, 0.25);
 				border-radius: 3px;
 				content: '';
 				display: inline-block;
@@ -1912,7 +1915,7 @@
 			background: #2e3842;
 			background-size: 20px 20px;
 			color: #fff;
-			content: '\f00c';
+			/*content: '\f00c';*/
 			margin-bottom: 5px;			
 		}
 
@@ -2342,8 +2345,8 @@
 		background-color: transparent;
 		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #FFD633;
-		color: #FFD633;
+		box-shadow: inset 0 0 0 2px #37b34a;
+		color: #37b34a;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -3270,7 +3273,6 @@
 		-webkit-overflow-scrolling: touch;
 		background: #37b34a;
 		color: #fff;
-
 		height: 100%;
 		max-width: 80%;
 		overflow-y: auto;
@@ -3293,17 +3295,27 @@
 				margin: 0.5em 0 0 0;
 				padding: 0.5em 0 0 0;
 			}
+				#menu ul > li > div.pork-guy{
+					height: 280px;
+					width: 150px;
+					margin: 20px auto 40px;
 
+				}
+
+				#menu ul > li > div.pork-guy > img {
+					width: 100%;
+    				height: auto;
+				}
 				#menu ul > li:first-child {
 					border-top: 0 !important;
 					margin-top: 0 !important;
 					padding-top: 0 !important;
 				}
-				#menu ul > li:last-child  {
+				/*#menu ul > li:last-child  {
 					color: #331A00 !important;
 					font-size: 15pt !important;
 					margin-top: 0.3em;
-				}
+				}*/
 
 				#menu ul > li > a {
 					border: 0;
@@ -3314,6 +3326,8 @@
 					outline: 0;
 					text-decoration: none;
 					text-transform: uppercase;
+					box-shadow: inset 0 0 0 2px #ffe24d;
+					color: #ffe24d;
 				}
 					#menu ul > li > a:hover {
 						color: #331A00;
